--- a/Shopping/Views/Home/Contact.cshtml
+++ b/Shopping/Views/Home/Contact.cshtml
@@ -1,32 +1,65 @@
 ﻿@model ContactModel
-<div class="row">
+@{
+    ViewData["Title"] = "Liên hệ";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
+<!-- Main Content -->
+<div class="container my-5">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="text-center mb-4 fw-bold">Liên hệ với chúng tôi</h2>
+        </div>
 
-	<div class="col-sm-5 col-md-5">
-		@Html.Raw(@Model.Map)
-		@Html.Raw(Model.Description)
-	</div>
-	<div class="col-sm-4">
-		<div class="address">
-			<h5><b>Name : @Model.Name</b></h5>
-			<h5>Email : @Model.Email</h5>
-			<h5>@Model.Phone</h5>
+        <!-- Map Section -->
+        <div class="col-md-5 mb-4">
+            <div class="card shadow-sm border-0">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold mb-3">Bản đồ</h5>
+                    <div class="map-container">
+                        @Html.Raw(@Model.Map)
+                    </div>
+                    <div class="mt-3 text-muted">
+                        @Html.Raw(Model.Description)
+                    </div>
+                </div>
+            </div>
+        </div>
 
-		</div>
-	</div>
-	<div class="col-md-4">
-		<div class="fb-page"
-			 data-href="https://www.facebook.com/divineshop.vn"
-			 data-tabs="message"
-			 data-width="100%" data-height=""
-			 data-small-header="false"
-			 data-adapt-container-width="true"
-			 data-hide-cover="false"
-			 data-show-facepile="true">
-			<blockquote cite="https://www.facebook.com/divineshop.vn" class="fb-xfbml-parse-ignore">
-				<a href="https://www.facebook.com/divineshop.vn">Divine Shop - Game bản quyền</a>
-			</blockquote>
-		</div>
-	</div>
+        <!-- Contact Info Section -->
+        <div class="col-md-4 mb-4">
+            <div class="card shadow-sm border-0">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold mb-3">Thông tin liên hệ</h5>
+                    <ul class="list-unstyled">
+                        <li><strong>Tên:</strong> @Model.Name</li>
+                        <li><strong>Email:</strong> @Model.Email</li>
+                        <li><strong>Điện thoại:</strong> @Model.Phone</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
+        <!-- Facebook Page Section -->
+        <div class="col-md-3 mb-4">
+            <div class="card shadow-sm border-0">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold mb-3">Theo dõi chúng tôi</h5>
+                    <div class="fb-page"
+                         data-href="https://www.facebook.com/divineshop.vn"
+                         data-tabs="message"
+                         data-width="100%"
+                         data-height=""
+                         data-small-header="false"
+                         data-adapt-container-width="true"
+                         data-hide-cover="false"
+                         data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/divineshop.vn" class="fb-xfbml-parse-ignore">
+                            <a target="_blank" href="https://www.facebook.com/Dmhung1210 ">Web Ban Hang ASP Net</a>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
