--- a/Shopping/Views/Home/Wishlist.cshtml
+++ b/Shopping/Views/Home/Wishlist.cshtml
@@ -1,45 +1,51 @@
 ﻿@{
-    ViewData["title"] = "List Wishlist";
+    ViewData["Title"] = "Danh sách yêu thích";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     var key = 0;
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-
-</head>
-<body>
-    <h3>List Wishlist</h3>
-
-
-    <table class="table" id="myTable">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Product Name</th>
-                <th>Product Description</th>
-                <th>Product Price</th>
-                <th>Product Image</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var wishlist_product in Model)
-            {
-                key++;
-                <tr>
-                    <td>@key</td>
-                    <td>@wishlist_product.Product.Name</td>
-                    <td>@Html.Raw(@wishlist_product.Product.Description)</td>
-                    <td>@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", wishlist_product.Product.Price)</td>
-                    <td> <img src="~/media/products/@wishlist_product.Product.Image" width="120px" height="150px" /> </td>
-                    <td><a class="btn btn-danger btn-sm confirmDeletion" asp-action="DeleteWishlist" asp-controller="Home" asp-route-Id="@wishlist_product.Wishlists.Id">Delete</a></td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</body>
-
-</html>
+<!-- Main Content -->
+<div class="container my-5">
+    <div class="row">
+        <div class="col-12">
+            <h3 class="text-center mb-4 fw-bold">Danh sách yêu thích</h3>
+            <div class="table-responsive">
+                <table class="table table-hover align-middle" id="myTable">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>STT</th>
+                            <th>Tên sản phẩm</th>
+                            <th>Mô tả</th>
+                            <th>Giá</th>
+                            <th>Hình ảnh</th>
+                            <th>Hành động</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var wishlist_product in Model)
+                        {
+                            key++;
+                            <tr>
+                                <td>@key</td>
+                                <td>@wishlist_product.Product.Name</td>
+                                <td>@Html.Raw(@wishlist_product.Product.Description)</td>
+                                <td class="text-warning fw-bold">@string.Format(new System.Globalization.CultureInfo("vi-VN"), "{0:N0} VNĐ", wishlist_product.Product.Price)</td>
+                                <td>
+                                    <img src="~/media/products/@wishlist_product.Product.Image" width="120px" height="150px" class="img-fluid rounded" alt="@wishlist_product.Product.Name" />
+                                </td>
+                                <td>
+                                    <a class="btn btn-danger btn-sm confirmDeletion"
+                                       asp-action="DeleteWishlist"
+                                       asp-controller="Home"
+                                       asp-route-Id="@wishlist_product.Wishlists.Id">
+                                        <i class="fa fa-trash"></i> Delete
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
