--- a/Shopping/Areas/Admin/Views/Product/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Index.cshtml
@@ -150,9 +150,7 @@
                                 <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Product" asp-route-Id="@item.Id">
                                     <i class="fas fa-edit"></i> Edit
                                 </a>
-                                <a class="btn btn-danger btn-sm confirmDeletion" asp-action="Delete" asp-controller="Product" asp-route-Id="@item.Id">
-                                    <i class="fas fa-trash"></i> Delete
-                                </a>
+                                <a class="btn btn-danger btn-sm confirmDeletion" asp-action="Delete" asp-controller="Product" asp-route-Id="@item.Id">Delete</a>
                             </td>
                         </tr>
                     }
